# cmini-rs

./: .gitignore  Cargo.toml  authors.json  cached_stats.json  corpora.json  layouts.json  likes.json  links.json  table.json  test.py
cache/: 100-swaps.json  3layout.json  3pinky.json  a-really-cool-layout-that-totally-isnt-cursed.json  a02.json  a03.json  a04.json  a05.json  a06.json  a10.json  a11.json  a12.json  a14.json  a15.json  a16.json  a18.json  a19.json  a20.json  a21.json  a22.json  a23.json  a24.json  a25.json  a26.json  a27.json  a28.json  abcfed.json  absinth-angle.json  absinth-test.json  absinth.json  ace-vim-test.json  ace-vim.json  add.json  adept.json  adept2.json  adept30.json  adnw-english-bigram.json  adnw.json  adumb.json  aehi.json  (+1233 more)
corpora/dutch/: bigrams.json  monograms.json  trigrams.json
corpora/french/: bigrams.json  monograms.json  trigrams.json
corpora/wordle/: bigrams.json  monograms.json  trigrams.json  words.json
layouts/: a-really-cool-layout-that-totally-isnt-cursed.json  absinth-angle.json  absinth-test.json  absinth.json  al'bhed-colemak.json  al'bhed-dvorak.json  al'bhed-qwerty.json  alphabet.json  apt26-bare.json  apt3-3.json  apt5.json  aptary.json  arcadia-ibrab00.json  arijantest.json  asset-shit.json  baremak.json  beakl-43.json  bnfh2.json  bnpinky.json  burn.json  canarecurva.json  canaria.json  canary-alt.json  canary-alt2.json  canary-alt3.json  canary-deutsch.json  canary-kaitlyn.json  canary-ren.json  carbyne.json  cardinal-angle.json  chatgptie.json  colemak-dh-angle.json  colevrak-compatible.json  conifer.json  crstheai.json  crts.json  cursive.json  cysteine.json  daisy.json  danie.json  (+273 more)
src/: cmds.rs  main.rs  test.rs  util.rs
src/cmds/: _8ball.rs  _github.rs  _view.rs  add.rs  assign.rs  corpus.rs  github.rs  help.rs  like.rs  likes.rs  maintenance.rs  mod.rs  remove.rs  rename.rs  suggest.rs  unlike.rs  view.rs
src/util/: analyzer.rs  analyzer_util.rs  authors.rs  cache.rs  consts.rs  conv.rs  core.rs  corpora.rs  get.rs  jsons.rs  layout.rs  links.rs  memory.rs  message.rs  mod.rs  parser.rs
