[package]
name = "cmini-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.197", features = ["rc"] }
serde_json = "1.0.115"
strsim = "0.11.0"
lazy_static = "1.4.0"
rayon = "1.10.0"
fxhash = "0.2.1"
rand = "0.8.5"
nohash-hasher = "0.2.0"
base64 = "0.22.0"
indexmap = { version = "2.2.6", features = ["serde"] }
enum-map = "3.0.0-beta.2"
strum = "0.26.2"
strum_macros = "0.26.2"

[dependencies.serenity]
version = "0.11.7"
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]
