[package]
name = "cmini-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
glob = "0.3.2"
indexmap = { version = "2.2.6", features = ["serde"] }
once_cell = "1.21.3"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["rc"] }
serde_json = "1.0.115"
strsim = "0.11.0"
strum = "0.26.2"
strum_macros = "0.26.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
thiserror = "2.0.12"

[dependencies.serenity]
version = "0.11.7"
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]
